<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="elemento"
            type="com.example.tareas.model.TareasModel" />
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/barraP"
            layout="@layout/toolbar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/circle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:background="@drawable/circle_red"
                android:layout_marginTop="30dp"
              android:layout_marginLeft="15dp"
                android:src="@drawable/tareas"/>
            <LinearLayout
                android:layout_width="245dp"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{elemento.tareaTitulo}"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/blueLight"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{elemento.tareaSubtit}"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rectangle"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{elemento.tareaHoras}"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hr"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
    android:layout_width="match_parent"
            android:text="@{elemento.tareaDesc}"
    android:layout_height="120dp"
            android:textSize="18sp"
    android:layout_marginTop="30dp"
            android:justificationMode="inter_word"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
            <EditText
                android:id="@+id/etHoras"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:singleLine="true"
                android:inputType="number"
                android:layout_marginLeft="30dp"
                android:drawableLeft="@drawable/reloj_blue"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/hint_horas"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/colorPrimaryDark"
                android:drawablePadding="10dp"
                android:textSize="22sp"
                android:background="@drawable/nombre_profile"
                validateEmpty="@{true}"
                />
            <EditText
                android:id="@+id/etNotas"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/hint_notas"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:background="@drawable/rectangulo_mensaje"
                validateEmpty="@{true}"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iniciar_blue"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/btn_guardar"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:onClick="@{(v) -> clickListener.onClick(v)}"
                    />
                <Button
                    android:id="@+id/btnTerminar"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/iniciar_blue_light"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/btn_terminar"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:onClick="@{(v) -> clickListener.onClick(v)}"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>